compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__alternative_patterns.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "pub fn go(xs) {\n  case xs {\n    1 | 2 -> 0\n    _ -> 1\n  }\n}\n"
---
module rec my.``mod``
let go (xs: int) = begin
    match xs with
    | 1 | 2 ->
        0
    | _ ->
        1
end
