compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__alternative_patterns_guard.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "pub fn go(xs) -> Int {\n  case xs {\n    [x] | [_, x] if x == 1 -> x\n    _ -> 0\n  }\n}\n"
---
module rec my.``mod``
let go (xs: list<int>) = begin
    match xs with
    | [x] | [_; x] when x = 1 ->
        x
    | _ ->
        0
end
