compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__constant.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "pub fn go(xs) {\n  case xs {\n    #(x) if x == 1 -> x\n    _ -> 0\n  }\n}\n"
---
module rec my.``mod``
let go (xs: (int64)) = begin
    match xs with
    | (x) when x = 1L ->
        x
    | _ ->
        0L
end
