compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__custom_type_constructor_imported_and_aliased.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "import other_module.{A as B}\nfn func() {\n  case B {\n    x if x == B -> True\n    _ -> False\n  }\n}\n"
---
module rec my.``mod``
open package
let B = other_module.A
let private func () = begin
    match B with
    | x when x = B ->
        true
    | _ ->
        false
end
