compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__imported_aliased_ok.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "import gleam.{Ok as Y}\npub type X {\n  Ok\n}\nfn func() {\n  case Y {\n    y if y == Y -> True\n    _ -> False\n  }\n}\n"
---
module rec my.``mod``
let Y = gleam.Ok
type X =
| Ok
    
let private func () = begin
    match Y with
    | y when y = Y ->
        true
    | _ ->
        false
end
