compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__keyword_var.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "\npub const function = 5\npub const do = 10\npub fn go() {\n  let class = 5\n  let while = 10\n  let var = 7\n  case var {\n    _ if class == while -> True\n    _ if [class] == [5] -> True\n    function if #(function) == #(5) -> False\n    _ if do == function -> True\n    while if while > 5 -> False\n    class -> False\n  }\n}\n"
---
module rec my.``mod``
#nowarn "25" // Incomplete pattern matches on this expression.

[<Literal>]
let ``function`` = 5L
[<Literal>]
let ``do`` = 10L
let go () = begin
    let ``class`` = 5L
    let ``while`` = 10L
    let var = 7L
    match var with
    | _ when ``class`` = ``while`` ->
        true
    | _ when [``class``] = [5L] ->
        true
    | ``function`` when (Tuple1 ``function``) = (Tuple1 5L) ->
        false
    | _ when 10L = 5L ->
        true
    | ``while`` when ``while`` > 5L ->
        false
    | ``class`` ->
        false
end
