compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__module_access_aliased.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "\n          import hero/submodule as myhero\n          pub fn go() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == myhero.ironman.name -> True\n              _ -> False\n            }\n          }\n        "
---
module rec my.``mod``
#nowarn "25" // Incomplete pattern matches on this expression.
module myhero = hero.submodule
let go () = begin
    let name = "Tony Stark"
    match name with
    | n when n = myhero.ironman.name ->
        true
    | _ ->
        false
end
