compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__module_tuple_access.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "\n          import hero\n          pub fn go() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == hero.hero.1 -> True\n              _ -> False\n            }\n          }\n        "
---
module rec my.``mod``
#nowarn "25" // Incomplete pattern matches on this expression.
#nowarn "3220" // This method or property is not normally used from F# code, use an explicit tuple pattern for deconstruction instead.
open package
let go () = begin
    let name = "Tony Stark"
    match name with
    | n when n = hero.hero.Item2 ->
        true
    | _ ->
        false
end
